@@ -1,33 +1,34 @@
-
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.025.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.036.
 use strict;
 use warnings;
 
-use 5.010000;
+use 5.010;
 
 use ExtUtils::MakeMaker 6.17;
 
-
-
 my %WriteMakefileArgs = (
   "ABSTRACT" => "Classify data with Analogical Modeling",
-  "AUTHOR" => "Theron Stanford <shixilun\@yahoo.com>, Nathan Glenn <garfieldnate\@gmail.com>",
+  "AUTHOR" => "Theron Sanford <shixilun\@yahoo.com>, Nathan Glenn <garfieldnate\@gmail.com>",
   "CONFIGURE_REQUIRES" => {
     "ExtUtils::MakeMaker" => "6.17"
   },
   "DISTNAME" => "Algorithm-AM",
-  "EXE_FILES" => [],
+  "EXE_FILES" => [
+    "bin/analogize.pl"
+  ],
   "LICENSE" => "perl",
-  "MIN_PERL_VERSION" => "5.010000",
+  "MIN_PERL_VERSION" => "5.010",
   "NAME" => "Algorithm::AM",
   "PREREQ_PM" => {
     "Carp" => 0,
     "Class::Tiny" => 0,
     "Crypt::PRNG" => 0,
     "Exporter::Easy" => 0,
+    "Getopt::Long" => "2.13",
     "Import::Into" => 0,
     "Log::Any" => 0,
     "Path::Tiny" => 0,
+    "Pod::Usage" => 0,
     "Text::Table" => 0,
     "XSLoader" => 0,
     "feature" => 0,
@@ -60,9 +61,11 @@ my %FallbackPrereqs = (
   "ExtUtils::MakeMaker" => "6.17",
   "File::Spec" => 0,
   "FindBin" => 0,
+  "Getopt::Long" => "2.13",
   "Import::Into" => 0,
   "Log::Any" => 0,
   "Path::Tiny" => 0,
+  "Pod::Usage" => 0,
   "Test::Deep" => 0,
   "Test::Exception" => 0,
   "Test::LongString" => 0,
@@ -87,6 +90,3 @@ delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
   unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
 
 WriteMakefile(%WriteMakefileArgs);
-
-
-
